# the-world-covered

./: Cargo.toml  Dockerfile
diagrams/: DB-creation.excalidraw
ml/: testing.ipynb
src/: lib.rs  main.rs
src/data_types/: activity.rs  athlete.rs  common.rs  mod.rs  telemetry.rs
src/data_types/gc/: effort.rs  mod.rs  route.rs  segment.rs  stats.rs
src/data_types/strava/: activity.rs  athlete.rs  common.rs  mod.rs  segment.rs  telemetry.rs
src/database/: cursors.rs  gc_db.rs  mod.rs  mongodb.rs  persistance.rs  redis.rs  statistics.mongodb.js  statistics_func_mongodb.js  strava_db.mongodb.js  strava_db.rs
src/maintenance/: db_integrity_checks.rs  mod.rs  sync_from_strava.rs
src/processors/: commonality.rs  gradient_finder.rs  mod.rs  routes.rs  statistics.rs  sync_from_strava.rs
src/strava/: api.rs  auth.rs  mod.rs
src/util/: db_integrity_checks.rs  dependencies.rs  facilities.rs  geo.rs  logging.rs  mod.rs  sync_from_strava.rs  time.rs
