[package]
name = "ground-covered"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
curl = "0.4.44"
petgraph = "0.6.3"
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
toml = "0.7.3"

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["tokio-sync"]
