[package]
name = "ground-covered"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
curl = "0.4.44"
futures-util = "0.3.28"
geo-types = "0.7.9"
once_cell = "1.17.1"
petgraph = "0.6.3"
polyline = "0.10.1"
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
toml = "0.7.3"

[dependencies.mongodb]
version = "2.5.0"

[dependencies.tokio]
version = "1.28.1"
features = ["full"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
